--- a/pom.xml
+++ b/pom.xml
@@ -494,3 +494,43 @@
     </profiles>
 
 </project>
+
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+<modelVersion>4.0.0</modelVersion>
+<groupId>com.groupId</groupId>
+<artifactId>com.artifactId</artifactId>
+<version>0.0.1-SNAPSHOT</version>
+<packaging>war</packaging>
+<properties>
+    <maven.compiler.source>1.8</maven.compiler.source>
+    <maven.compiler.target>1.8</maven.compiler.target>
+</properties>
+<dependencies>
+    <!-- https://mvnrepository.com/artifact/io.rest-assured/rest-assured -->
+    <dependency>
+    
+        <groupId>io.rest-assured</groupId>
+        <artifactId>rest-assured</artifactId>
+        <version>5.3.0</version>
+
+    </dependency>
+
+</dependencies>
+
+
+<build>
+    <plugins>
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-war-plugin</artifactId>
+            <version>3.3.1</version>
+            <configuration>
+                <source>1.8</source>
+                <target>1.8</target>
+                <failOnMissingWebXml>false</failOnMissingWebXml>
+            </configuration>
+
+        </plugin>
+
+    </plugins>
+</build>
